// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-time-splitted-picker-field Renders \`date-time-splitted-picker-field\` with custom props 1`] = `
<div>
  <div
    class="layout row reverse"
  >
    <div
      class="flex"
    >
      <c-date-picker-field-stub
        disabled="true"
        hide-details="hide-details"
        label="Custom label"
        max="1970-01-03"
        min="1970-01-02"
        value="1970-01-02"
      />
    </div>
    <!---->
  </div>
  <div
    class="v-text-field__details mt-2"
  >
    <div
      class="v-messages theme--light error--text"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;

exports[`date-time-splitted-picker-field Renders \`date-time-splitted-picker-field\` with default props 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex pr-1"
    >
      <c-date-picker-field-stub
        hide-details="hide-details"
        label=""
      />
    </div>
    <div
      class="flex"
    >
      <time-picker-field-stub
        hide-details="hide-details"
        label=""
        stepsinhours="4"
      />
    </div>
  </div>
  <div
    class="v-text-field__details mt-2"
  >
    <div
      class="v-messages theme--light error--text"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;

exports[`date-time-splitted-picker-field Renders \`date-time-splitted-picker-field\` with errors 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex pr-1"
    >
      <c-date-picker-field-stub
        error="true"
        hide-details="hide-details"
        label=""
      />
    </div>
    <div
      class="flex"
    >
      <time-picker-field-stub
        error="true"
        hide-details="hide-details"
        label=""
        stepsinhours="4"
      />
    </div>
  </div>
  <div
    class="v-text-field__details mt-2"
  >
    <div
      class="v-messages theme--light error--text"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      >
        <div
          class="v-messages__message"
        >
          Error message
        </div>
      </transition-group-stub>
    </div>
  </div>
</div>
`;
